...
        beforeStart: 'The end date shold be after the start date',
        beforePresent: 'The event is not allowed to be in the past',
        requiredJob: 'There must be at least one job.',
    },
    User: {
        user: 'User',
        userName: 'Username',
        password: 'Password',
        email: 'E-Mail',
        signIn: 'Sign In',
        signUp: 'Sign Up',
        invalidCredentials: 'Password or Username are invalid!',
        editProfile: 'Edit profile',
        location: 'Location',
...
